# users

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
conf/: alembic.ini
src/auth_service/: ioc.py  run.py  web.py
src/auth_service/application/auth/: exceptions.py  request_response_models.py  service.py
src/auth_service/application/auth/protocols/: __init__.py  manage.py
src/auth_service/application/common/: exceptions.py
src/auth_service/application/common/protocols/: __init__.py  uow.py
src/auth_service/application/user/: dto.py  exceptions.py  request.py  request_response_models.py  responses.py  service.py
src/auth_service/application/user/protocols/: __init__.py  add.py  password_hasher.py  read.py  update.py
src/auth_service/domain/common/: entities.py  exceptions.py  value_objects.py
src/auth_service/domain/salt/: protocols.py
src/auth_service/domain/uow/: protocols.py
src/auth_service/domain/user/: __init__.py  constants.py  entities.py  enums.py  exceptions.py  value_objects.py
src/auth_service/domain/user/constraints/: exceptions.py
src/auth_service/domain/user/constraints/validations/: __init__.py  constants.py
src/auth_service/domain/user/constraints/validations/validators/: __init__.py  base.py  password.py  username.py
src/auth_service/domain/user/entity/: enums.py  fields.py  model.py
src/auth_service/domain/user/protocols/: __init__.py  add.py  read.py  update.py
src/auth_service/infrastructure/auth/repositories/: access.py
src/auth_service/infrastructure/database/: models.py
src/auth_service/infrastructure/database/alembic/: env.py
src/auth_service/infrastructure/database/alembic/versions/: 153ea635892f_first_init.py  a88e26acaec8_initial_migration.py
src/auth_service/infrastructure/repositories/: salt_repository.py  user_repository.py
src/auth_service/infrastructure/schemes/: user.py
src/auth_service/infrastructure/user/repositories/: __init__.py  add.py  password_hasher.py  read.py  update.py
src/auth_service/main/: config.py  web_api.py
src/auth_service/main/di/: main.py
src/auth_service/main/di/providers/: adapters.py  usecases.py
src/auth_service/presentation/: base.py  base_router.py  exc_handlers.py  middleware_setup.py  user_exceptions.py  users.py
src/auth_service/presentation/auth/: router.py  schemes.py
src/auth_service/presentation/common/: exc_handlers.py  schemes.py
src/auth_service/presentation/common/middlewares/: func.py  tracing.py
src/auth_service/presentation/user/: router.py  schemes.py
tests/auth_service/domain/user/: test_password.py  test_username.py
underLogs/: __init__.py  setup.py
underLogs/configuration/: __init__.py  setup.py
underLogs/formatters/: __init__.py  base.py  functions.py  json_formatter.py
underLogs/handlers/: __init__.py  base.py  functions.py  json_handler.py  protocol.py
underLogs/levels/: __init__.py  config.py
underLogs/loggers/: __init__.py  functions.py
