[tool.poetry]
name = "AuthService"
version = "0.1.0"
description = "Auth and Users service"
authors = ["MaximGit1 <allq137x@gmail.com>"]
readme = "README.md"
packages = [{include = "auth_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.3"
pytest = "^8.3.4"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
bcrypt = "^4.2.1"
dishka = "^1.4.2"
uvicorn = "^0.34.0"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
httpx = "^0.28.1"
mypy = "^1.14.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version="py311"
src = ["src"]
include = ["src/**.py", "tests/**.py"]

[tool.ruff.lint]
ignore = [
   "ARG",
   "ANN",
   "D",
   "EM101",
   "EM102",
   "PT001",
   "PT023",
   "SIM108",
   "SIM114",
   "TRY003",
   "PLW2901",
   "RET505",
   "PLR0913",
   "UP038",
   "TC001",
   "SLF001",
   "COM812",
   "ISC001",
   "S101",
   "BLE001",
]
select = [
  "ALL",
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"